feat: add checkstyle configuration

--- a/app/quarkus-application/src/main/resources/application.properties
+++ b/app/quarkus-application/src/main/resources/application.properties
@@ -5,3 +5,7 @@ quarkus.openapi.path=/openapi
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.theme=flattop
+
+# Configuração da conexão com o MongoDB
+quarkus.mongodb.connection-string=mongodb://admin:1234@localhost:27017
+quarkus.mongodb.database=mongodb
