--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+.idea
+
+### Ignore application.properties ###
+**/src/main/resources/application.properties
