--- a/app/quarkus-application/src/main/resources/application.properties
+++ b/app/quarkus-application/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.application.name=quarkus-hexagonal-architecture
+quarkus.resteasy.default-produces=application/json
 
 # Configurações do OpenAPI
 quarkus.openapi.path=/openapi
