feat: update mappers

--- a/app/quarkus-application/src/main/resources/application.properties
+++ b/app/quarkus-application/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 quarkus.application.name=quarkus-hexagonal-architecture
 quarkus.resteasy.default-produces=application/json
-
 # Configurações do OpenAPI
 quarkus.openapi.path=/openapi
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.theme=flattop
-
 # Configuração da conexão com o MongoDB
-quarkus.mongodb.connection-string=mongodb://admin:1234@localhost:27017
+quarkus.mongodb.connection-string=mongodb://admin:1234@localhost:27017/?retryWrites=false&directConnection=true&authSource=admin&readConcernLevel=local
 quarkus.mongodb.database=mongodb
+
