--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3.8'
 
 services:
   mongodb:
-    image: mongo:latest
+    image: mongodb/mongodb-community-server:latest
     container_name: mongodb
     ports:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: 1234
+    command: [ "mongod", "--replSet", "rs0", "--bind_ip_all" ]
     volumes:
       - mongo-data:/data/db
 
