--- a/app/quarkus-application/pom.xml
+++ b/app/quarkus-application/pom.xml
@@ -34,6 +34,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-mongodb-panache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-mongodb-client</artifactId>
+        </dependency>
 
         <!-- JUnit 5 e Mockito -->
         <dependency>
