--- a/app/quarkus-application/pom.xml
+++ b/app/quarkus-application/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.marcoantdev.hexagonalarchitecture</groupId>
-        <artifactId>quarkus-hexagonal-architecture</artifactId>
+        <artifactId>smart-expense</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
