--- a/app/quarkus-application/src/main/resources/application.properties
+++ b/app/quarkus-application/src/main/resources/application.properties
@@ -8,4 +8,6 @@ quarkus.swagger-ui.theme=flattop
 # Configuração da conexão com o MongoDB
 quarkus.mongodb.connection-string=mongodb://admin:1234@localhost:27017/mongodb?retryWrites=false&directConnection=true&authSource=admin&readConcernLevel=local
 quarkus.mongodb.database=mongodb
+quarkus.arc.validate-injection=true
+
 
