--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <quarkus.version>3.2.0.Final</quarkus.version>
-
         <checkstyle.version>10.15.0</checkstyle.version>
         <maven-checkstyle-plugin.version>3.12.0</maven-checkstyle-plugin.version>
         <quarkus-resteasy.version>3.2.0.Final</quarkus-resteasy.version>
@@ -28,6 +26,7 @@
         <quarkus-hibernate-validator.version>3.2.0.Final</quarkus-hibernate-validator.version>
         <quarkus-junit5.version>3.2.0.Final</quarkus-junit5.version>
         <rest-assured.version>5.3.0</rest-assured.version>
+        <quarkus-hibernate-validator.version>3.2.0.Final</quarkus-hibernate-validator.version>
     </properties>
 
     <dependencyManagement>
@@ -73,7 +72,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configLocation>${basedir}/resources/google_checks.xml</configLocation>
+                    <configLocation>${basedir}/src/main/resources/google_checks.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                 </configuration>
