--- a/app/quarkus-application/pom.xml
+++ b/app/quarkus-application/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.marcoantdev.hexagonalarchitecture</groupId>
+        <groupId>com.marcoantdev</groupId>
         <artifactId>smart-expense</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
