--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.marcoantdev.hexagonalarchitecture</groupId>
+    <groupId>com.marcoantdev</groupId>
     <artifactId>smart-expense</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -72,7 +72,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configLocation>${basedir}/src/main/resources/google_checks.xml</configLocation>
+                    <configLocation>${basedir}/resources/google_checks.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                 </configuration>
