--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -20,13 +19,6 @@
         <quarkus.version>3.2.0.Final</quarkus.version>
         <checkstyle.version>10.15.0</checkstyle.version>
         <maven-checkstyle-plugin.version>3.12.0</maven-checkstyle-plugin.version>
-        <quarkus-resteasy.version>3.2.0.Final</quarkus-resteasy.version>
-        <quarkus-hibernate-orm-panache.version>3.2.0.Final</quarkus-hibernate-orm-panache.version>
-        <quarkus-jdbc-h2.version>3.2.0.Final</quarkus-jdbc-h2.version>
-        <quarkus-hibernate-validator.version>3.2.0.Final</quarkus-hibernate-validator.version>
-        <quarkus-junit5.version>3.2.0.Final</quarkus-junit5.version>
-        <rest-assured.version>5.3.0</rest-assured.version>
-        <quarkus-hibernate-validator.version>3.2.0.Final</quarkus-hibernate-validator.version>
     </properties>
 
     <dependencyManagement>
@@ -43,17 +35,20 @@
                 <artifactId>checkstyle</artifactId>
                 <version>${checkstyle.version}</version>
             </dependency>
-            <!-- Swagger Annotations -->
             <dependency>
                 <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>2.2.15</version>
             </dependency>
-            <!-- Jackson Annotations -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>2.14.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-junit5-mockito</artifactId>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
